--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="blackTransparent">#BF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#8F8F8F</color>
+    <color name="whiteGrey">#EEEEEE</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="primaryBrown">#4C3D3D</color>
     <color name="primaryYellow">#FFD95A</color>
