--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="primaryYellow">#FFD95A</color>
     <color name="primaryOrange">#C07F00</color>
     <color name="primaryCream">#FFF7D4</color>
+    <color name="transparent">#00FFFFFF</color>
 </resources>
