--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="blackTransparent">#BF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#8F8F8F</color>
+    <color name="whiteGrey">#EEEEEE</color>
+    <color name="transparent">#00FFFFFF</color>
     <color name="primaryBrown">#4C3D3D</color>
     <color name="primaryYellow">#FFD95A</color>
     <color name="primaryOrange">#C07F00</color>
     <color name="primaryCream">#FFF7D4</color>
+    <color name="secondaryOrange">#33C07F00</color>
 </resources>
