--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -9,14 +9,15 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/backButton"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:background="@drawable/ic_back"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_marginStart="14dp"
         android:layout_marginTop="14dp"
+        android:background="@drawable/ic_back"
         android:contentDescription="@string/back_button_description"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imageField"
