slicing profile page

--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,5 +4,6 @@
         <item>@font/gfs_didot</item>
         <item>@font/poppins</item>
         <item>@font/poppins_bold</item>
+        <item>@font/scheherazade</item>
     </array>
 </resources>
