--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,18 +5,19 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ProfileActivity">
+    tools:context=".ui.profile.ProfileActivity">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/button_fab_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:backgroundTint="@color/primaryBrown"
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/backButton"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="14dp"
+        android:background="@drawable/ic_back"
+        android:contentDescription="@string/back_button_description"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_back"
-        app:tint="@color/white" />
+        tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/tv_likes"
@@ -26,7 +27,8 @@
         android:text="@string/profile_likes_sum"
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="@id/username_profile"
-        app:layout_constraintStart_toEndOf="@id/button_fab_back"
+        app:layout_constraintStart_toEndOf="@id/backButton"
+        app:layout_constraintEnd_toEndOf="@id/tv_posts"
         app:layout_constraintTop_toTopOf="@id/username_profile" />
 
     <TextView
@@ -43,12 +45,14 @@
         android:id="@+id/tv_posts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="50dp"
         android:fontFamily="@font/scheherazade"
         android:text="@string/profile_likes_sum"
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="@id/username_profile"
         app:layout_constraintStart_toEndOf="@id/tv_likes"
+        app:layout_constraintEnd_toStartOf="@id/username_profile"
         app:layout_constraintTop_toTopOf="@id/username_profile" />
 
     <TextView
@@ -90,7 +94,7 @@
         android:layout_width="74dp"
         android:layout_height="74dp"
         android:layout_marginTop="73dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="20dp"
         android:src="@drawable/ic_profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -117,12 +121,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view_divider_profile" />
 
-
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_grid"
         style="?attr/materialIconButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/grid_description"
         app:icon="@drawable/ic_grid"
         app:layout_constraintEnd_toStartOf="@+id/button_list"
         app:layout_constraintTop_toTopOf="@id/tv_label_postings" />
@@ -132,6 +136,7 @@
         style="?attr/materialIconButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/list_description"
         app:icon="@drawable/ic_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_label_postings" />
@@ -146,11 +151,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button_grid" />
 
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rc_post_profile"
+        android:id="@+id/rc_post_profile_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:visibility="gone"
+        android:contentDescription="@string/rv_post_description"
+        tools:listitem="@layout/item_post_profile"
         app:layout_constraintTop_toBottomOf="@id/divider_postings" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rc_post_profile_grid"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
+        tools:itemCount="20"
+        android:contentDescription="@string/rv_post_description"
+        tools:listitem="@layout/item_post_profile_grid"
+        app:layout_constraintTop_toBottomOf="@id/divider_postings" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
