--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -51,7 +51,7 @@
             android:layout_height="match_parent"
             android:padding="16dp">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/detail_image_profile"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
@@ -80,6 +80,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/detail_image_profile" />
+
 
             <TextView
                 android:id="@+id/detail_description"
