--- a/app/src/main/res/layout/activity_detail_catalog.xml
+++ b/app/src/main/res/layout/activity_detail_catalog.xml
@@ -34,6 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
+                android:layout_marginTop="10dp"
                 app:navigationIcon="@drawable/ic_back" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
