--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -8,13 +8,19 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
+    <include
+        android:id="@+id/content_dashboard"
+        layout="@layout/content_dashboard"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
+        android:layout_width="360dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
         android:background="@color/white"
+        android:fitsSystemWindows="false"
         app:headerLayout="@layout/nav_header_dashboard"
         app:menu="@menu/activity_main_drawer" />
 </androidx.drawerlayout.widget.DrawerLayout>
