--- a/app/src/main/res/layout/nav_header_dashboard.xml
+++ b/app/src/main/res/layout/nav_header_dashboard.xml
@@ -9,26 +9,25 @@
         android:layout_width="match_parent"
         android:layout_height="170dp"
         android:background="@drawable/side_nav_bar"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/settingTitle"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginHorizontal="50dp"
-        android:gravity="center"
+        android:background="@drawable/button_gradient"
         android:fontFamily="@font/gfs_didot"
-        android:textColor="@color/white"
+        android:gravity="center"
         android:letterSpacing="0.3"
+        android:text="@string/drawer_setting"
+        android:textColor="@color/white"
         android:textSize="15sp"
         android:textStyle="bold"
-        android:text="@string/drawer_setting"
-        android:background="@drawable/button_gradient"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/appIcon"
@@ -36,24 +35,25 @@
         android:layout_height="80dp"
         android:contentDescription="@string/img_icon_description"
         android:src="@drawable/ic_ulik_batik"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="50dp"
         app:layout_constraintBottom_toTopOf="@id/settingTitle"
-        app:layout_constraintStart_toStartOf="@id/settingTitle"/>
+        app:layout_constraintStart_toStartOf="@id/settingTitle"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/appName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name2"
-        android:textStyle="bold"
-        android:textColor="@color/blackTransparent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="10dp"
         android:fontFamily="@font/gfs_didot"
         android:letterSpacing="0.3"
+        android:text="@string/app_name2"
+        android:textColor="@color/blackTransparent"
         android:textSize="20sp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="30dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/settingTitle"
+
         app:layout_constraintStart_toEndOf="@id/appIcon"
-        app:layout_constraintEnd_toEndOf="@id/settingTitle"/>
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
