--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -42,60 +42,135 @@
         app:layout_constraintTop_toBottomOf="@id/registerTitle"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <EditText
-        android:id="@+id/usernameEdit"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:background="@drawable/edit_text_field"
+    <!-- Username -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/usernameTextInputLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="55dp"
         android:layout_marginTop="50dp"
-        android:layout_marginHorizontal="55dp"
-        android:importantForAutofill="no"
-        android:inputType="text"
-        android:hint="@string/username"
-        android:textColor="@color/black"
-        android:drawableStart="@drawable/ic_user"
-        android:drawablePadding="10dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:boxBackgroundMode="outline"
+        app:boxStrokeColor="@color/black"
+        android:labelFor="@id/usernameEdit"
+        app:endIconMode="clear_text"
+        app:hintAnimationEnabled="false"
+        app:hintEnabled="false"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/loginDescription"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/loginDescription">
 
-    <EditText
-        android:id="@+id/emailEdit"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:background="@drawable/edit_text_field"
-        android:layout_marginTop="25dp"
-        android:layout_marginHorizontal="55dp"
-        android:importantForAutofill="no"
-        android:inputType="textEmailAddress"
-        android:hint="@string/email"
-        android:textColor="@color/black"
-        android:drawableStart="@drawable/ic_email"
-        android:drawablePadding="13dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/usernameEdit"/>
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/usernameEdit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/username"
+            android:background="@drawable/edit_text_field"
+            android:drawableStart="@drawable/ic_user"
+            android:drawablePadding="10dp"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:textColor="@color/black" />
 
-    <EditText
-        android:id="@+id/passwordEdit"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:background="@drawable/edit_text_field"
-        android:layout_marginTop="25dp"
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Email -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/emailTextInputLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="55dp"
-        android:importantForAutofill="no"
-        android:inputType="textPassword"
-        android:hint="@string/password"
-        android:textColor="@color/black"
-        android:drawableStart="@drawable/ic_password"
-        android:drawablePadding="10dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="25dp"
+        app:boxBackgroundMode="outline"
+        app:boxStrokeColor="@color/black"
+        android:labelFor="@id/emailEdit"
+        app:endIconMode="clear_text"
+        app:hintAnimationEnabled="false"
+        app:hintEnabled="false"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/emailEdit"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/usernameTextInputLayout">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/emailEdit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/email"
+            android:background="@drawable/edit_text_field"
+            android:drawableStart="@drawable/ic_email"
+            android:drawablePadding="10dp"
+            android:importantForAutofill="no"
+            android:inputType="textEmailAddress"
+            android:textColor="@color/black" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Password -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/passwordTextInputLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="55dp"
+        android:layout_marginTop="25dp"
+        app:boxBackgroundMode="outline"
+        app:boxStrokeColor="@color/black"
+        android:labelFor="@id/passwordEdit"
+        app:endIconMode="password_toggle"
+        app:hintAnimationEnabled="false"
+        app:hintEnabled="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/passwordEdit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/password"
+            android:background="@drawable/edit_text_field"
+            android:drawableStart="@drawable/ic_password"
+            android:drawablePadding="10dp"
+            android:importantForAutofill="no"
+            android:inputType="textPassword"
+            android:textColor="@color/black" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Confirm Password -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/confirmPasswordTextInputLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="55dp"
+        android:layout_marginTop="25dp"
+        app:boxBackgroundMode="outline"
+        app:boxStrokeColor="@color/black"
+        android:labelFor="@id/confirmPasswordEdit"
+        app:endIconMode="password_toggle"
+        app:hintAnimationEnabled="false"
+        app:hintEnabled="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/confirmPasswordEdit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/confirm_password"
+            android:background="@drawable/edit_text_field"
+            android:drawableStart="@drawable/ic_password"
+            android:drawablePadding="10dp"
+            android:importantForAutofill="no"
+            android:inputType="textPassword"
+            android:textColor="@color/black"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/registerBtn"
-        android:layout_width="300dp"
+        android:layout_width="0dp"
         android:layout_height="60dp"
         android:text="@string/register"
         android:textColor="@color/white"
