--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -23,13 +23,14 @@
         android:id="@+id/scanTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/scan_title"
-        android:fontFamily="@font/poppins_bold"
-        android:textSize="30sp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/poppins_bold"
+        android:text="@string/scan_title"
+        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="@id/cam_cardview"
         app:layout_constraintTop_toBottomOf="@id/backButton"
         tools:ignore="RtlSymmetry" />
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cam_cardview"
@@ -39,23 +40,23 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="100dp"
         app:cardCornerRadius="20dp"
-        app:layout_constraintTop_toBottomOf="@id/scanTitle"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" >
+        app:layout_constraintTop_toBottomOf="@id/scanTitle">
 
         <androidx.camera.view.PreviewView
             android:id="@+id/camPreview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
 
         <ImageView
             android:id="@+id/imageIv"
-            android:src="@drawable/img_batik1"
-            android:scaleType="centerCrop"
-            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:contentDescription="@string/img_field_description"/>
+            android:contentDescription="@string/img_field_description"
+            android:scaleType="centerCrop"
+            android:src="@drawable/img_batik1"
+            android:visibility="gone" />
 
     </androidx.cardview.widget.CardView>
 
@@ -63,32 +64,46 @@
         android:id="@+id/camBtn"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/ic_camera_white"
-        android:scaleType="fitCenter"
         android:background="@drawable/button_gradient"
-        app:layout_constraintStart_toStartOf="parent"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_camera_white"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cam_cardview"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cam_cardview" />
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/galleryBtn"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="@drawable/button_cream"
-        android:src="@drawable/ic_gallery"
         android:layout_marginStart="10dp"
+        android:background="@drawable/button_cream"
         android:contentDescription="@string/gallery_description"
+        android:src="@drawable/ic_gallery"
+        app:layout_constraintBottom_toBottomOf="@id/camBtn"
         app:layout_constraintEnd_toStartOf="@id/camBtn"
+        app:layout_constraintStart_toStartOf="@id/cam_cardview" />
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/resetBtn"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/button_gradient"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_restart"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/cam_cardview"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="@id/cam_cardview"
-        app:layout_constraintBottom_toBottomOf="@id/camBtn"/>
+        app:layout_constraintTop_toBottomOf="@id/cam_cardview" />
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/bottomSheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
         android:elevation="5dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -100,8 +115,7 @@
             android:background="@drawable/container_post"
             app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
-            <include
-                layout="@layout/item_bottom_sheet"/>
+            <include layout="@layout/item_bottom_sheet" />
         </FrameLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
