boarding, login, register layout fix & bundle register

--- a/app/src/main/res/layout/activity_boarding.xml
+++ b/app/src/main/res/layout/activity_boarding.xml
@@ -43,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/poppins_bold"
         android:gravity="center"
         android:text="@string/onboarding_welcome_title"
@@ -72,6 +72,7 @@
         android:layout_marginHorizontal="100dp"
         android:background="@drawable/button_gradient"
         android:text="@string/button_next"
+        android:layout_marginBottom="50dp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
