--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -64,6 +64,7 @@
         app:endIconMode="clear_text"
         app:hintAnimationEnabled="false"
         app:hintEnabled="false"
+        app:errorTextColor="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/loginDescription">
@@ -94,6 +95,7 @@
         app:endIconMode="password_toggle"
         app:hintAnimationEnabled="false"
         app:hintEnabled="false"
+        app:errorTextColor="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout">
