--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -25,7 +25,7 @@
         android:textStyle="bold"
         android:textAlignment="center"
         android:letterSpacing="0.1"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="70dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/loginDescription"/>
 
@@ -38,9 +38,8 @@
         android:textColor="@color/blackTransparent"
         android:textSize="14sp"
         android:textAlignment="center"
-        android:layout_marginBottom="550dp"
-        app:layout_constraintTop_toBottomOf="@id/registerTitle"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@id/registerTitle" />
 
     <!-- Username -->
     <com.google.android.material.textfield.TextInputLayout
@@ -49,13 +48,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="55dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         app:boxBackgroundMode="outline"
         app:boxStrokeColor="@color/black"
         android:labelFor="@id/usernameEdit"
         app:endIconMode="clear_text"
         app:hintAnimationEnabled="false"
         app:hintEnabled="false"
+        app:errorTextColor="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/loginDescription">
@@ -81,13 +81,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="55dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
         app:boxBackgroundMode="outline"
         app:boxStrokeColor="@color/black"
         android:labelFor="@id/emailEdit"
         app:endIconMode="clear_text"
         app:hintAnimationEnabled="false"
         app:hintEnabled="false"
+        app:errorTextColor="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/usernameTextInputLayout">
@@ -113,13 +114,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="55dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
         app:boxBackgroundMode="outline"
         app:boxStrokeColor="@color/black"
         android:labelFor="@id/passwordEdit"
         app:endIconMode="password_toggle"
         app:hintAnimationEnabled="false"
         app:hintEnabled="false"
+        app:errorTextColor="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout">
@@ -144,13 +146,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="55dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="30dp"
         app:boxBackgroundMode="outline"
         app:boxStrokeColor="@color/black"
         android:labelFor="@id/confirmPasswordEdit"
         app:endIconMode="password_toggle"
         app:hintAnimationEnabled="false"
         app:hintEnabled="false"
+        app:errorTextColor="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout">
@@ -166,7 +170,7 @@
             android:importantForAutofill="no"
             android:inputType="textPassword"
             android:textColor="@color/black"/>
-    </com.google.android.material.textfield.TextInputLayout>
+     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/registerBtn"
