--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -7,13 +7,15 @@
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/menuBtn"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/ic_menu"
+        android:contentDescription="@string/btn_dashboard"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/helloTv"
@@ -47,14 +49,16 @@
         android:background="@drawable/ic_profile"
         app:layout_constraintBottom_toBottomOf="@id/menuBtn"
         app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="@string/btn_dashboard"
         app:layout_constraintTop_toTopOf="@id/menuBtn" />
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="@id/menuBtn"
-        app:layout_constraintTop_toBottomOf="@id/usernameTv">
+        app:layout_constraintTop_toBottomOf="@id/usernameTv"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
@@ -62,46 +66,46 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/scanBtn"
-                android:layout_width="120dp"
-                android:layout_height="150dp"
-                android:layout_marginStart="20dp"
+                android:layout_width="100dp"
+                android:layout_height="130dp"
                 android:layout_marginTop="40dp"
                 android:background="@drawable/button_menu_scan"
                 android:drawableTop="@drawable/ic_scan"
                 android:fontFamily="@font/poppins_bold"
                 android:gravity="bottom"
-                android:paddingTop="30dp"
+                android:paddingTop="20dp"
                 android:paddingBottom="10dp"
                 android:text="@string/dashboard_scan"
                 android:textAlignment="textEnd"
                 android:textColor="@color/white"
                 android:textSize="15sp"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="@id/divider"
+                app:layout_constraintEnd_toStartOf="@id/catalogBtn"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="RtlCompat" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/catalogBtn"
-                android:layout_width="120dp"
-                android:layout_height="150dp"
-
+                android:layout_width="100dp"
+                android:layout_height="130dp"
                 android:background="@drawable/button_menu_general"
                 android:fontFamily="@font/poppins_bold"
                 android:gravity="bottom"
+                android:layout_marginHorizontal="5dp"
                 android:paddingBottom="10dp"
                 android:text="@string/dashboard_catalog"
                 android:textAlignment="textEnd"
                 android:textColor="@color/primaryBrown"
-                android:textSize="15sp"
-                app:layout_constraintEnd_toStartOf="@id/likesBtn"
+                android:textSize="10sp"
                 app:layout_constraintStart_toEndOf="@id/scanBtn"
+                app:layout_constraintEnd_toStartOf="@id/likesBtn"
                 app:layout_constraintTop_toTopOf="@id/scanBtn"
-                tools:ignore="RtlCompat" />
+                tools:ignore="RtlCompat,SmallSp" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/likesBtn"
-                android:layout_width="120dp"
-                android:layout_height="150dp"
+                android:layout_width="100dp"
+                android:layout_height="130dp"
                 android:background="@drawable/button_menu_general"
                 android:fontFamily="@font/poppins_bold"
                 android:gravity="bottom"
@@ -109,8 +113,8 @@
                 android:text="@string/dashboard_likes"
                 android:textAlignment="textEnd"
                 android:textColor="@color/primaryBrown"
-                android:textSize="15sp"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="@id/divider"
                 app:layout_constraintStart_toEndOf="@id/catalogBtn"
                 app:layout_constraintTop_toTopOf="@id/catalogBtn"
                 tools:ignore="RtlCompat" />
@@ -119,9 +123,9 @@
                 android:id="@+id/divider"
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
-                android:layout_marginStart="50dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="15dp"
-                android:layout_marginEnd="50dp"
+                android:layout_marginEnd="30dp"
                 android:background="@color/grey"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -155,8 +159,7 @@
         app:iconSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/nestedScrollView"
-        tools:visibility="visible" />
+        app:layout_constraintTop_toTopOf="@+id/nestedScrollView" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/dashboardFab"
@@ -165,6 +168,7 @@
         android:layout_margin="40dp"
         android:backgroundTint="@color/primaryYellow"
         android:src="@drawable/ic_add_post"
+        android:contentDescription="@string/btn_dashboard"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
